# kade-drive

./: .gitignore  .pylintrc  404.html  Dockerfile  LICENSE  README.md  client.py  docker-compose.yaml  index.html  main.py  main_recv.py  main_send.py  makefile  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  server.py  sitemap.xml  store_file.py
.github/workflows/: docker-image.yml  main.yml
autodiscovery/: index.html
cap-analysis/: index.html
client/: cli.py  client.py  index.html
core/: network.py  routing.py  storage.py
description/: index.html
docs/: 404.html  index.html  mkdocs.yml  sitemap.xml
docs/autodiscovery/: index.html
docs/cap-analysis/: index.html
docs/client/: index.html
docs/description/: index.html
docs/en/: autodiscovery.md  cap-analysis.md  client.md  fault-tolerance.md  introduction.md  persistence.md  why-kademlia.md
docs/es/: cliente.md  index.html  introducción.md  persistencia.md  por-que-kademlia.md
docs/examples/: index.html
docs/fault-tolerance/: index.html
docs/installation-setup/: index.html
docs/other-dependencies/: index.html
docs/persistence/: index.html
docs/recommendations/: index.html
docs/replication/: index.html
docs/search/: search_index.json
docs/site/: 404.html  index.html  (+1 more)
docs_setup/: mkdocs.yml
es/: index.html
examples/: index.html
fault-tolerance/: index.html
installation-setup/: index.html
kade_drive/: cli.py  client.py  main_recv.py  server.py  test_store_file.py
kademlia/: crawling.py  network.py  node.py  protocol.py  routing.py  storage.py  utils.py
message_system/: message_system.py
models/: file.py
other-dependencies/: index.html
persistence/: index.html
recommendations/: index.html
replication/: index.html
rpc/: protocol.py  utils.py
rpc_udp/: protocol.py
rpcudptcp/: protocol.py  tcp_protocol.py
tests/: conftest.py  data_to_split.txt  store_file.py  test_node.py  test_server.py  test_splitdata.py  test_storage.py  test_store_file.py  test_utils.py
why-kademlia/: index.html
(+137 files in other folders)
