[tool.poetry]
name = "kade_drive"
version = "0.1.0"
description = "distributed file system based on kademlia dht"
authors = ["DanielUH2019 <danielcardenascabrera2016@gmail.com>", "JavierOramas <javiale2000@gmail.com>", "Lia001218 <liazerqueraf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kade_drive"}]

[tool.poetry.dependencies]
python = "^3.10"
netifaces="0.11.0"
rpyc="5.3.1"
typer="0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
